[project]
name = "rinex-stitch"
version = "0.1.1"
description = "Split and merge RINEX observation files at epoch gaps/boundaries"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [{name = "Your Name"}]
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.7.0"]
georinex = ["georinex>=1.16.1", "xarray", "numpy"]
dev = [
  "black>=24.3.0",
  "ruff>=0.5.0",
  "build>=1.2.1",
  "pre-commit>=3.7.0",
]

[project.scripts]
rinex-stitch = "rinex_stitch.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
src = ["src"]
